@@ -13,6 +13,7 @@
 [[v0.21.4]]
 == 0.21.4 (TBD)
 
+icon:check[] Elasticsearch: Start up of Gentics Mesh will now fail early if the embedded Elasticsearch server can't be started. link:https://github.com/gentics/mesh/issues/445[#445]
 icon:check[] Elasticsearch: The error logging has been enhanced. More detailed information will be logged if an index can't be created.
 icon:check[] UI: Fixed potential encoding issues in the UI on systems which are not using the UTF-8 default charset.
 
